--- a/UI/register.html
+++ b/UI/register.html
@@ -9,7 +9,7 @@
             <div id="wholebody">
              <div class="forms">
              <form name="harriet" action="" method="POST" onsubmit="return validate(this);">
-                <h3>Register here</h3>
+                <h3>Register here..</h3>
                  <input type="email" placeholder="Enter email" name="email"/><br/>
                  <input type="text" placeholder="Phone number" name="number"/><br/>
                  <input type="password" placeholder="Password" name="password"/><br/>
