--- a/UI/index.html
+++ b/UI/index.html
@@ -14,7 +14,7 @@
                  <p>Corruption is a huge bane to Africa’s development. 
                   African countries must develop novel and localised solutions that will curb this menace,
                    hence the birth of iReporter. iReporter enables any/every citizen to bring any
-                    form of corruption to the notice of appropriate authorities and the general public.
+                    form of corruption.. to the notice of appropriate authorities and the general public.
                      Users can also report on things that needs government intervention</p>
                      <p><img src="" width="" height=""/></p>
              </div>
