--- a/user.html
+++ b/user.html
@@ -12,15 +12,14 @@
         <ul class="navigation">
             
             <li><a href="user.html">Home</a></li>
-            <li><a href="redflag.html">Red-flag</a></li>
-            <li><a href="intervene.html">Intervention</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="redflag.html">Records</a></li>
+            <li><a href="admin.html">Admin</a></li>
             <li><a href="index.html">Logout</a></li>
         </ul>
     </div>
     
     <div id="contents">
+        <img src="assets/12345.jpg" width="80%" height="200px%"/>
         <p>Corruption is a huge bane to Africa’s development. 
             African countries must develop novel and localised solutions that will curb this menace,
              hence the birth of iReporter. iReporter enables any/every citizen to bring any
