--- a/user.html
+++ b/user.html
@@ -12,20 +12,22 @@
         <ul class="navigation">
             
             <li><a href="user.html">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="redflag.html">Records</a></li>
             <li><a href="admin.html">Admin</a></li>
             <li><a href="index.html">Logout</a></li>
         </ul>
     </div>
     
-    <div id="contents">
+    <div id="usercontents">
         <img src="assets/12345.jpg" width="80%" height="200px%"/>
         <p>Corruption is a huge bane to Africa’s development. 
-            African countries must develop novel and localised solutions that will curb this menace,
+           African countries must develop novel and localised solutions that will curb this menace,
              hence the birth of iReporter. iReporter enables any/every citizen to bring any
               form of corruption to the notice of appropriate authorities and the general public.
                Users can also report on things that needs government intervention</p>
     </div>
 </div>
+<div id="footer"> Designed by Harriet Akot</div>
     </body>
 </html>
