--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
              <form name="harriet" action="" method="POST">
                 <h3>I-Reporter Login</h3>
                  <input type="text" placeholder="Username" required name="username" required /><br/>
-                 <input type="password" name="password" placeholder="Password"/><br/>
+                 <input type="password" name="password" placeholder="Password" required/><br/>
                  <input type="button" onclick="redirect(this.form)" value="Login"/><br/>
                 </form>
                 <script language="javascript">
