--- a/redflag.html
+++ b/redflag.html
@@ -12,6 +12,7 @@
                     <ul class="navigation">
                         
                         <li><a href="user.html">Home</a></li>
+                        <li><a href="profile.html">Profile</a></li>
                         <li><a href="redflag.html">Records</a></li>
                         <li><a href="admin.html">Admin</a></li>
                         <li><a href="index.html">Logout</a></li>
