--- a/register.html
+++ b/register.html
@@ -10,9 +10,9 @@
              <div class="forms">
              <form name="harriet" action="" method="POST" onsubmit="return validate(this);">
                 <h3>Register here</h3>
-                 <input type="email" placeholder="Enter email" name="email"/><br/>
-                 <input type="text" placeholder="Phone number" name="number"/><br/>
-                 <input type="password" placeholder="Password" name="password"/><br/>
+                 <input type="email" placeholder="Enter email" name="email" required/><br/>
+                 <input type="text" placeholder="Phone number" name="number" required/><br/>
+                 <input type="password" placeholder="Password" name="password" required/><br/>
                  <input type="password" placeholder="Re-enter Password" name="password2"/><br/>
                  <input type="button" onclick="redirect(this.form)" value="Register"/><br/>
                 </form>
